# ai-real-estate-advisor

./: .gitignore  CHANGELOG.md  DATA_PREPROCESSING_SECTION.md  EVALUATION_ARCHITECTURE_README.md  LICENSE  PRD.MD  RAG_EVALUATION_README.md  README.md  app.py  app_v2.py  aspect_based_chunker.py  batch_question_tester.py  best_chunking_strategy.py  choose_chunk_size.ipynb  chunking_comparison_system.py  evaluation.md  introduction.md  literature_review.md  methodology.md  preprocess_v2.py  preprocessing.py  prompts.py  pyproject.toml  rag_pipeline.py  requirements.txt  retrieval.py  streaming.py  test_evaluation_interface.py  test_reranker.py  test_selfquery.py  utils.py
artifacts_v2/: embedding_docs_v2.jsonl  structured_properties_v2.parquet
artifacts_v3/: aspect_chunks.json
chat_history/: session_20250818_181340.json  session_20250818_181834.json  session_20250818_182140.json  session_20250818_182155.json  session_20250818_182224.json  session_20250818_182452.json  session_20250818_182523.json
chats/: session_1755538195.json  session_1755538232.json  session_1755547625.json  session_1755548231.json  session_1755985280.json
common/: cfg.py
dataset/: 16-august-4pm_page1-ALL_property1-19.csv  16-august-4pm_page1-ALL_property1-19.json  16-august-4pm_page1-ALL_property1-897.json  embedding_docs.jsonl  greater_manchester_zoopla.csv  greater_manchester_zoopla.json  manchester_properties_for_sale_mini.csv  structured_properties.csv  structured_properties.parquet
dataset_v2/: legal_uk_greater_manchester.jsonl  properties_with_crime_data.json  run_ready_100.json
eval/: RAGAS_NAN_FIXES.md  README.md  configs.yaml  dataset_schemas.py  debug_ragas.py  ragas_dataset.py  reporting.py  run_evaluation.py  score.py  testset_gen.py
reports/: ASPECT_BASED_INTEGRATION_SUMMARY.md  CHUNKING_USAGE_GUIDE.md  chunking_evaluation_report.md  comprehensive_chunking_solution.md  evaluation.md  introduction.md  literature_review.md  methodology.md
